615_compiler_design_with_llvm/assn/06_CPIRGenIf/CminusParser.cpp

// Generated from
// /home/ribbas/grad_courses/615_compiler_design_with_llvm/assn/06_CPIRGenIf/Cminus.g4
// by ANTLR 4.9

#include "CminusListener.h"
#include "CminusVisitor.h"

#include "CminusParser.h"

using namespace antlrcpp;
using namespace antlr4;

CminusParser::CminusParser(TokenStream* input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA,
                                               _sharedContextCache);
}

CminusParser::~CminusParser() {
    delete _interpreter;
}

std::string CminusParser::getGrammarFileName() const {
    return "Cminus.g4";
}

const std::vector<std::string>& CminusParser::getRuleNames() const {
    return _ruleNames;
}

dfa::Vocabulary& CminusParser::getVocabulary() const {
    return _vocabulary;
}

//----------------- ProgramContext
//------------------------------------------------------------------

CminusParser::ProgramContext::ProgramContext(ParserRuleContext* parent,
                                             size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::ProgramContext::EOF() {
    return getToken(CminusParser::EOF, 0);
}

std::vector<CminusParser::Var_declarationContext*>
CminusParser::ProgramContext::var_declaration() {
    return getRuleContexts<CminusParser::Var_declarationContext>();
}

CminusParser::Var_declarationContext*
CminusParser::ProgramContext::var_declaration(size_t i) {
    return getRuleContext<CminusParser::Var_declarationContext>(i);
}

std::vector<CminusParser::Fun_declarationContext*>
CminusParser::ProgramContext::fun_declaration() {
    return getRuleContexts<CminusParser::Fun_declarationContext>();
}

CminusParser::Fun_declarationContext*
CminusParser::ProgramContext::fun_declaration(size_t i) {
    return getRuleContext<CminusParser::Fun_declarationContext>(i);
}

size_t CminusParser::ProgramContext::getRuleIndex() const {
    return CminusParser::RuleProgram;
}

void CminusParser::ProgramContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterProgram(this);
}

void CminusParser::ProgramContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitProgram(this);
}

antlrcpp::Any
CminusParser::ProgramContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitProgram(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::ProgramContext* CminusParser::program() {
    ProgramContext* _localctx =
        _tracker.createInstance<ProgramContext>(_ctx, getState());
    enterRule(_localctx, 0, CminusParser::RuleProgram);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(34);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(34);
            _errHandler->sync(this);
            switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
                _input, 0, _ctx)) {
                case 1: {
                    setState(32);
                    var_declaration();
                    break;
                }

                case 2: {
                    setState(33);
                    fun_declaration();
                    break;
                }

                default:
                    break;
            }
            setState(36);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while (_la == CminusParser::INT

                 || _la == CminusParser::VOID);
        setState(38);
        match(CminusParser::EOF);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Var_declarationContext
//------------------------------------------------------------------

CminusParser::Var_declarationContext::Var_declarationContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::Var_declarationContext::INT() {
    return getToken(CminusParser::INT, 0);
}

tree::TerminalNode* CminusParser::Var_declarationContext::ID() {
    return getToken(CminusParser::ID, 0);
}

tree::TerminalNode* CminusParser::Var_declarationContext::SEMICOLON() {
    return getToken(CminusParser::SEMICOLON, 0);
}

tree::TerminalNode* CminusParser::Var_declarationContext::LB() {
    return getToken(CminusParser::LB, 0);
}

tree::TerminalNode* CminusParser::Var_declarationContext::RB() {
    return getToken(CminusParser::RB, 0);
}

tree::TerminalNode* CminusParser::Var_declarationContext::NUM() {
    return getToken(CminusParser::NUM, 0);
}

size_t CminusParser::Var_declarationContext::getRuleIndex() const {
    return CminusParser::RuleVar_declaration;
}

void CminusParser::Var_declarationContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterVar_declaration(this);
}

void CminusParser::Var_declarationContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitVar_declaration(this);
}

antlrcpp::Any
CminusParser::Var_declarationContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitVar_declaration(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Var_declarationContext* CminusParser::var_declaration() {
    Var_declarationContext* _localctx =
        _tracker.createInstance<Var_declarationContext>(_ctx, getState());
    enterRule(_localctx, 2, CminusParser::RuleVar_declaration);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(40);
        match(CminusParser::INT);
        setState(41);
        match(CminusParser::ID);
        setState(45);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == CminusParser::LB) {
            setState(42);
            match(CminusParser::LB);
            setState(43);
            dynamic_cast<Var_declarationContext*>(_localctx)->size =
                match(CminusParser::NUM);
            setState(44);
            match(CminusParser::RB);
        }
        setState(47);
        match(CminusParser::SEMICOLON);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Fun_declarationContext
//------------------------------------------------------------------

CminusParser::Fun_declarationContext::Fun_declarationContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

CminusParser::Fun_type_specifierContext*
CminusParser::Fun_declarationContext::fun_type_specifier() {
    return getRuleContext<CminusParser::Fun_type_specifierContext>(0);
}

tree::TerminalNode* CminusParser::Fun_declarationContext::ID() {
    return getToken(CminusParser::ID, 0);
}

tree::TerminalNode* CminusParser::Fun_declarationContext::LP() {
    return getToken(CminusParser::LP, 0);
}

tree::TerminalNode* CminusParser::Fun_declarationContext::RP() {
    return getToken(CminusParser::RP, 0);
}

CminusParser::Compound_stmtContext*
CminusParser::Fun_declarationContext::compound_stmt() {
    return getRuleContext<CminusParser::Compound_stmtContext>(0);
}

std::vector<CminusParser::ParamContext*>
CminusParser::Fun_declarationContext::param() {
    return getRuleContexts<CminusParser::ParamContext>();
}

CminusParser::ParamContext*
CminusParser::Fun_declarationContext::param(size_t i) {
    return getRuleContext<CminusParser::ParamContext>(i);
}

tree::TerminalNode* CminusParser::Fun_declarationContext::VOID() {
    return getToken(CminusParser::VOID, 0);
}

std::vector<tree::TerminalNode*> CminusParser::Fun_declarationContext::COMMA() {
    return getTokens(CminusParser::COMMA);
}

tree::TerminalNode* CminusParser::Fun_declarationContext::COMMA(size_t i) {
    return getToken(CminusParser::COMMA, i);
}

size_t CminusParser::Fun_declarationContext::getRuleIndex() const {
    return CminusParser::RuleFun_declaration;
}

void CminusParser::Fun_declarationContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterFun_declaration(this);
}

void CminusParser::Fun_declarationContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitFun_declaration(this);
}

antlrcpp::Any
CminusParser::Fun_declarationContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitFun_declaration(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Fun_declarationContext* CminusParser::fun_declaration() {
    Fun_declarationContext* _localctx =
        _tracker.createInstance<Fun_declarationContext>(_ctx, getState());
    enterRule(_localctx, 4, CminusParser::RuleFun_declaration);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(49);
        fun_type_specifier();
        setState(50);
        match(CminusParser::ID);
        setState(51);
        match(CminusParser::LP);
        setState(61);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
            case CminusParser::INT: {
                setState(52);
                param();
                setState(57);
                _errHandler->sync(this);
                _la = _input->LA(1);
                while (_la == CminusParser::COMMA) {
                    setState(53);
                    match(CminusParser::COMMA);
                    setState(54);
                    param();
                    setState(59);
                    _errHandler->sync(this);
                    _la = _input->LA(1);
                }
                break;
            }

            case CminusParser::VOID: {
                setState(60);
                match(CminusParser::VOID);
                break;
            }

            default:
                throw NoViableAltException(this);
        }
        setState(63);
        match(CminusParser::RP);
        setState(64);
        compound_stmt();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Fun_type_specifierContext
//------------------------------------------------------------------

CminusParser::Fun_type_specifierContext::Fun_type_specifierContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::Fun_type_specifierContext::INT() {
    return getToken(CminusParser::INT, 0);
}

tree::TerminalNode* CminusParser::Fun_type_specifierContext::VOID() {
    return getToken(CminusParser::VOID, 0);
}

size_t CminusParser::Fun_type_specifierContext::getRuleIndex() const {
    return CminusParser::RuleFun_type_specifier;
}

void CminusParser::Fun_type_specifierContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterFun_type_specifier(this);
}

void CminusParser::Fun_type_specifierContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitFun_type_specifier(this);
}

antlrcpp::Any CminusParser::Fun_type_specifierContext::accept(
    tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitFun_type_specifier(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Fun_type_specifierContext* CminusParser::fun_type_specifier() {
    Fun_type_specifierContext* _localctx =
        _tracker.createInstance<Fun_type_specifierContext>(_ctx, getState());
    enterRule(_localctx, 6, CminusParser::RuleFun_type_specifier);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(66);
        _la = _input->LA(1);
        if (!(_la == CminusParser::INT

              || _la == CminusParser::VOID)) {
            _errHandler->recoverInline(this);
        } else {
            _errHandler->reportMatch(this);
            consume();
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ParamContext
//------------------------------------------------------------------

CminusParser::ParamContext::ParamContext(ParserRuleContext* parent,
                                         size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::ParamContext::INT() {
    return getToken(CminusParser::INT, 0);
}

tree::TerminalNode* CminusParser::ParamContext::ID() {
    return getToken(CminusParser::ID, 0);
}

tree::TerminalNode* CminusParser::ParamContext::LB() {
    return getToken(CminusParser::LB, 0);
}

tree::TerminalNode* CminusParser::ParamContext::RB() {
    return getToken(CminusParser::RB, 0);
}

size_t CminusParser::ParamContext::getRuleIndex() const {
    return CminusParser::RuleParam;
}

void CminusParser::ParamContext::enterRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterParam(this);
}

void CminusParser::ParamContext::exitRule(tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitParam(this);
}

antlrcpp::Any
CminusParser::ParamContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitParam(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::ParamContext* CminusParser::param() {
    ParamContext* _localctx =
        _tracker.createInstance<ParamContext>(_ctx, getState());
    enterRule(_localctx, 8, CminusParser::RuleParam);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(68);
        match(CminusParser::INT);
        setState(69);
        match(CminusParser::ID);
        setState(72);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == CminusParser::LB) {
            setState(70);
            match(CminusParser::LB);
            setState(71);
            match(CminusParser::RB);
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Compound_stmtContext
//------------------------------------------------------------------

CminusParser::Compound_stmtContext::Compound_stmtContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<CminusParser::Var_declarationContext*>
CminusParser::Compound_stmtContext::var_declaration() {
    return getRuleContexts<CminusParser::Var_declarationContext>();
}

CminusParser::Var_declarationContext*
CminusParser::Compound_stmtContext::var_declaration(size_t i) {
    return getRuleContext<CminusParser::Var_declarationContext>(i);
}

std::vector<CminusParser::StatementContext*>
CminusParser::Compound_stmtContext::statement() {
    return getRuleContexts<CminusParser::StatementContext>();
}

CminusParser::StatementContext*
CminusParser::Compound_stmtContext::statement(size_t i) {
    return getRuleContext<CminusParser::StatementContext>(i);
}

size_t CminusParser::Compound_stmtContext::getRuleIndex() const {
    return CminusParser::RuleCompound_stmt;
}

void CminusParser::Compound_stmtContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterCompound_stmt(this);
}

void CminusParser::Compound_stmtContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitCompound_stmt(this);
}

antlrcpp::Any
CminusParser::Compound_stmtContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitCompound_stmt(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Compound_stmtContext* CminusParser::compound_stmt() {
    Compound_stmtContext* _localctx =
        _tracker.createInstance<Compound_stmtContext>(_ctx, getState());
    enterRule(_localctx, 10, CminusParser::RuleCompound_stmt);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(74);
        match(CminusParser::T__0);
        setState(78);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CminusParser::INT) {
            setState(75);
            var_declaration();
            setState(80);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(84);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (
            (((_la & ~0x3fULL) == 0) &&
             ((1ULL << _la) &
              ((1ULL << CminusParser::T__0) | (1ULL << CminusParser::IF) |
               (1ULL << CminusParser::WHILE) | (1ULL << CminusParser::RETURN) |
               (1ULL << CminusParser::LP) | (1ULL << CminusParser::SEMICOLON) |
               (1ULL << CminusParser::ID) | (1ULL << CminusParser::NUM))) !=
                 0)) {
            setState(81);
            statement();
            setState(86);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(87);
        match(CminusParser::T__1);

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- StatementContext
//------------------------------------------------------------------

CminusParser::StatementContext::StatementContext(ParserRuleContext* parent,
                                                 size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

CminusParser::Compound_stmtContext*
CminusParser::StatementContext::compound_stmt() {
    return getRuleContext<CminusParser::Compound_stmtContext>(0);
}

CminusParser::Selection_stmtContext*
CminusParser::StatementContext::selection_stmt() {
    return getRuleContext<CminusParser::Selection_stmtContext>(0);
}

CminusParser::Iteration_stmtContext*
CminusParser::StatementContext::iteration_stmt() {
    return getRuleContext<CminusParser::Iteration_stmtContext>(0);
}

CminusParser::Assignment_stmtContext*
CminusParser::StatementContext::assignment_stmt() {
    return getRuleContext<CminusParser::Assignment_stmtContext>(0);
}

CminusParser::Return_stmtContext*
CminusParser::StatementContext::return_stmt() {
    return getRuleContext<CminusParser::Return_stmtContext>(0);
}

CminusParser::ExpContext* CminusParser::StatementContext::exp() {
    return getRuleContext<CminusParser::ExpContext>(0);
}

tree::TerminalNode* CminusParser::StatementContext::SEMICOLON() {
    return getToken(CminusParser::SEMICOLON, 0);
}

size_t CminusParser::StatementContext::getRuleIndex() const {
    return CminusParser::RuleStatement;
}

void CminusParser::StatementContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterStatement(this);
}

void CminusParser::StatementContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitStatement(this);
}

antlrcpp::Any
CminusParser::StatementContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitStatement(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::StatementContext* CminusParser::statement() {
    StatementContext* _localctx =
        _tracker.createInstance<StatementContext>(_ctx, getState());
    enterRule(_localctx, 12, CminusParser::RuleStatement);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        setState(98);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
            _input, 8, _ctx)) {
            case 1: {
                enterOuterAlt(_localctx, 1);
                setState(89);
                compound_stmt();
                break;
            }

            case 2: {
                enterOuterAlt(_localctx, 2);
                setState(90);
                selection_stmt();
                break;
            }

            case 3: {
                enterOuterAlt(_localctx, 3);
                setState(91);
                iteration_stmt();
                break;
            }

            case 4: {
                enterOuterAlt(_localctx, 4);
                setState(92);
                assignment_stmt();
                break;
            }

            case 5: {
                enterOuterAlt(_localctx, 5);
                setState(93);
                return_stmt();
                break;
            }

            case 6: {
                enterOuterAlt(_localctx, 6);
                setState(94);
                exp(0);
                setState(95);
                match(CminusParser::SEMICOLON);
                break;
            }

            case 7: {
                enterOuterAlt(_localctx, 7);
                setState(97);
                match(CminusParser::SEMICOLON);
                break;
            }

            default:
                break;
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Selection_stmtContext
//------------------------------------------------------------------

CminusParser::Selection_stmtContext::Selection_stmtContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::Selection_stmtContext::IF() {
    return getToken(CminusParser::IF, 0);
}

tree::TerminalNode* CminusParser::Selection_stmtContext::LP() {
    return getToken(CminusParser::LP, 0);
}

CminusParser::Relational_expContext*
CminusParser::Selection_stmtContext::relational_exp() {
    return getRuleContext<CminusParser::Relational_expContext>(0);
}

tree::TerminalNode* CminusParser::Selection_stmtContext::RP() {
    return getToken(CminusParser::RP, 0);
}

std::vector<CminusParser::StatementContext*>
CminusParser::Selection_stmtContext::statement() {
    return getRuleContexts<CminusParser::StatementContext>();
}

CminusParser::StatementContext*
CminusParser::Selection_stmtContext::statement(size_t i) {
    return getRuleContext<CminusParser::StatementContext>(i);
}

tree::TerminalNode* CminusParser::Selection_stmtContext::ELSE() {
    return getToken(CminusParser::ELSE, 0);
}

size_t CminusParser::Selection_stmtContext::getRuleIndex() const {
    return CminusParser::RuleSelection_stmt;
}

void CminusParser::Selection_stmtContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterSelection_stmt(this);
}

void CminusParser::Selection_stmtContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitSelection_stmt(this);
}

antlrcpp::Any
CminusParser::Selection_stmtContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitSelection_stmt(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Selection_stmtContext* CminusParser::selection_stmt() {
    Selection_stmtContext* _localctx =
        _tracker.createInstance<Selection_stmtContext>(_ctx, getState());
    enterRule(_localctx, 14, CminusParser::RuleSelection_stmt);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(100);
        match(CminusParser::IF);
        setState(101);
        match(CminusParser::LP);
        setState(102);
        relational_exp();
        setState(103);
        match(CminusParser::RP);
        setState(104);
        dynamic_cast<Selection_stmtContext*>(_localctx)->then_cond =
            statement();
        setState(107);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
            _input, 9, _ctx)) {
            case 1: {
                setState(105);
                match(CminusParser::ELSE);
                setState(106);
                dynamic_cast<Selection_stmtContext*>(_localctx)->else_cond =
                    statement();
                break;
            }

            default:
                break;
        }

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Iteration_stmtContext
//------------------------------------------------------------------

CminusParser::Iteration_stmtContext::Iteration_stmtContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::Iteration_stmtContext::WHILE() {
    return getToken(CminusParser::WHILE, 0);
}

tree::TerminalNode* CminusParser::Iteration_stmtContext::LP() {
    return getToken(CminusParser::LP, 0);
}

CminusParser::Relational_expContext*
CminusParser::Iteration_stmtContext::relational_exp() {
    return getRuleContext<CminusParser::Relational_expContext>(0);
}

tree::TerminalNode* CminusParser::Iteration_stmtContext::RP() {
    return getToken(CminusParser::RP, 0);
}

CminusParser::StatementContext*
CminusParser::Iteration_stmtContext::statement() {
    return getRuleContext<CminusParser::StatementContext>(0);
}

size_t CminusParser::Iteration_stmtContext::getRuleIndex() const {
    return CminusParser::RuleIteration_stmt;
}

void CminusParser::Iteration_stmtContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterIteration_stmt(this);
}

void CminusParser::Iteration_stmtContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitIteration_stmt(this);
}

antlrcpp::Any
CminusParser::Iteration_stmtContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitIteration_stmt(this);
    else
        return visitor->visitChildren(this);
}

CminusParser::Iteration_stmtContext* CminusParser::iteration_stmt() {
    Iteration_stmtContext* _localctx =
        _tracker.createInstance<Iteration_stmtContext>(_ctx, getState());
    enterRule(_localctx, 16, CminusParser::RuleIteration_stmt);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(109);
        match(CminusParser::WHILE);
        setState(110);
        match(CminusParser::LP);
        setState(111);
        relational_exp();
        setState(112);
        match(CminusParser::RP);
        setState(113);
        statement();

    } catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Assignment_stmtContext
//------------------------------------------------------------------

CminusParser::Assignment_stmtContext::Assignment_stmtContext(
    ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode* CminusParser::Assignment_stmtContext::ID() {
    return getToken(CminusParser::ID, 0);
}

tree::TerminalNode* CminusParser::Assignment_stmtContext::ASN() {
    return getToken(CminusParser::ASN, 0);
}

std::vector<CminusParser::ExpContext*>
CminusParser::Assignment_stmtContext::exp() {
    return getRuleContexts<CminusParser::ExpContext>();
}

CminusParser::ExpContext* CminusParser::Assignment_stmtContext::exp(size_t i) {
    return getRuleContext<CminusParser::ExpContext>(i);
}

tree::TerminalNode* CminusParser::Assignment_stmtContext::SEMICOLON() {
    return getToken(CminusParser::SEMICOLON, 0);
}

tree::TerminalNode* CminusParser::Assignment_stmtContext::LB() {
    return getToken(CminusParser::LB, 0);
}

tree::TerminalNode* CminusParser::Assignment_stmtContext::RB() {
    return getToken(CminusParser::RB, 0);
}

size_t CminusParser::Assignment_stmtContext::getRuleIndex() const {
    return CminusParser::RuleAssignment_stmt;
}

void CminusParser::Assignment_stmtContext::enterRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->enterAssignment_stmt(this);
}

void CminusParser::Assignment_stmtContext::exitRule(
    tree::ParseTreeListener* listener) {
    auto parserListener = dynamic_cast<CminusListener*>(listener);
    if (parserListener != nullptr)
        parserListener->exitAssignment_stmt(this);
}

antlrcpp::Any
CminusParser::Assignment_stmtContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<CminusVisitor*>(visitor))
        return parserVisitor->visitAssignment_stmt(this);
    else
        return visitor->visitChildren(this);
}
